Fixes to admin stats and progression description to base

--- a/lib/moba_web/templates/arena/index.html.heex
+++ b/lib/moba_web/templates/arena/index.html.heex
@@ -1,7 +1,7 @@
 <div class="arena mt-2">
     <div class="row">
         <div class="col">
-            <div class="row">
+            <div class="row mb-3">
                 <div class="col">
                     <%= render "_pvp_progression.html", assigns %>
                 </div>
