--- a/lib/moba_web/templates/arena/_matchmaking.html.heex
+++ b/lib/moba_web/templates/arena/_matchmaking.html.heex
@@ -1,10 +1,13 @@
 <div class="card matchmaking" id="matchmaking-container" phx-hook="EqualHeight" phx-target=".arena .ranking">
     <div class="card-body p-0">
-        <div class="d-flex justify-content-center my-2">
-            <div class="custom-control custom-switch" data-toggle="tooltip" title="Allow the game to automatically play a match for you every 30 minutes.">
+        <div class="d-flex justify-content-around my-2">
+            <div class="custom-control custom-switch mt-1" data-toggle="tooltip" title="Allow the game to automatically play a match for you every 30 minutes.">
                 <input type="checkbox" class="custom-control-input" id="toggle-auto-matchmaking" phx-click="toggle-auto-matchmaking" checked={@current_player.preferences.auto_matchmaking}>
                 <label class="custom-control-label" for="toggle-auto-matchmaking">Auto Matchmaking</label>
             </div>
+            <%= live_redirect to: Routes.edit_arena_path(@socket, :edit), class: "btn btn-sm btn-primary text-primary" do %>
+                <i class="fa fa-group"></i> Edit Teams
+            <% end %> 
         </div>
         <div class="history">
             <table class="table-dark table mb-0">
