--- a/lib/moba_web/templates/shop/shop.html.heex
+++ b/lib/moba_web/templates/shop/shop.html.heex
@@ -118,7 +118,7 @@
                 <%= if @selected_inventory do %>
                     <hr/>
                     <div class="row selected-shop">
-                        <div class="col center">
+                        <div class="col center d-flex justify-content-center">
                             <img src={GH.image_url(@selected_inventory)} data-toggle="tooltip" title={GH.item_description(@selected_inventory)} class="item-img" />
                         </div>
                     </div>
