--- a/lib/moba_web/templates/match/show.html.heex
+++ b/lib/moba_web/templates/match/show.html.heex
@@ -25,7 +25,7 @@
 							</h2>
 						<% else %>
 							<%= if length(@picked_heroes) >= 5 do %>
-								<button type="button" class="btn text-center btn-lg btn-block btn-secondary dark-button margin-auto" phx-click="start" phx-hook="Loading" id="start-match-button">
+								<button type="button" class="btn text-center btn-lg btn-block btn-primary dark-button margin-auto shadow-fx" phx-click="start" phx-hook="Loading" id="start-match-button">
 									<span class="loading-text">
 										<i class="fa fa-play mr-1"></i>
 										Lock Picks and Start Match
@@ -48,19 +48,30 @@
 					<div class="col">
 						<div class="card mb-0 mt-2" phx-hook="EqualHeight" phx-target="#opponent-heroes-container" id="picks-card">
 							<ul class="nav nav-pills navtab-bg mt-2 justify-content-center">
-				              	<li class="nav-item">
-				                  	<a href="javascript:;" phx-click="hero-tab" phx-value-type="trained" data-toggle="tab" class={"nav-link px-2 py-1 #{if @hero_tab == "trained", do: "active"}"} phx-hook="Loading" id="trained-heroes-button">
-				                      	<span class="d-inline-block loading-text"><i class="fa fa-sword mr-1"></i>Trained Heroes</span>
-				                  	</a>
-				                </li>
-				                <li class="nav-item">
-				            		<a href="javascript:;" phx-click="hero-tab" phx-value-type="available" data-toggle="tab" class={"nav-link px-2 py-1 #{if @hero_tab == "available", do: "active"}"} phx-hook="Loading" id="available-heroes-button">
-				                      	<span class="d-inline-block loading-text"><i class="fa fa-dice mr-1"></i>Available Heroes</span>
-				                  	</a>
-				              	</li>
-            				</ul>
-			        		<div class="tab-content pt-0 mt-2">
-			          			<div class={"tab-pane fade #{if @hero_tab == "trained", do: "active show"}"} id="trained-heroes">
+								<li class="nav-item">
+            			<a href="javascript:;" phx-click="hero-tab" phx-value-type="teams" data-toggle="tab" class={"nav-link px-2 py-1 #{if @hero_tab == "teams", do: "active"}"} phx-hook="Loading" id="teams-heroes-button">
+                      	<span class="d-inline-block loading-text"><i class="fa fa-group mr-1"></i>Teams</span>
+                  	</a>
+              	</li>
+              	<li class="nav-item">
+                  	<a href="javascript:;" phx-click="hero-tab" phx-value-type="trained" data-toggle="tab" class={"nav-link px-2 py-1 #{if @hero_tab == "trained", do: "active"}"} phx-hook="Loading" id="trained-heroes-button">
+                      	<span class="d-inline-block loading-text"><i class="fa fa-sword mr-1"></i>Trained Heroes</span>
+                  	</a>
+                </li>
+                <li class="nav-item">
+            			<a href="javascript:;" phx-click="hero-tab" phx-value-type="available" data-toggle="tab" class={"nav-link px-2 py-1 #{if @hero_tab == "available", do: "active"}"} phx-hook="Loading" id="available-heroes-button">
+                      	<span class="d-inline-block loading-text"><i class="fa fa-dice mr-1"></i>Available Heroes</span>
+                  	</a>
+              	</li>
+	    				</ul>
+			        <div class="tab-content pt-0 mt-2">
+			        	<div class={"tab-pane fade #{if @hero_tab == "teams", do: "active show"}"} id="teams-heroes">
+									<hr class="mb-2"/>
+									<%= for team <- @teams do %>
+										<%= render "_team.html", team: team, picked_ids: Enum.map(@picked_heroes, &(&1.id))  %>
+									<% end %>
+								</div>
+			          <div class={"tab-pane fade #{if @hero_tab == "trained", do: "active show"}"} id="trained-heroes">
 									<hr class="mb-2"/>
 									<%= for hero <- @trained_heroes do %>
 										<%= render "_hero.html", hero: hero, picked_ids: Enum.map(@picked_heroes, &(&1.id))  %>
