--- a/lib/moba_web/templates/player/show.html.heex
+++ b/lib/moba_web/templates/player/show.html.heex
@@ -43,7 +43,7 @@
                     </h5>
                 <% end %>
                 <div class="card-body p-2 text-center">
-                    <img src={"/images/pve/#{@player.pve_tier}.png"} class={"pvp-rank big-rank-shadow-#{shadow_rank(@player)}"}data-toggle="tooltip" title={Moba.pve_tiers[@player.pve_tier]}/>
+                    <img src={"/images/pve/#{@player.pve_tier}.png"} class={"pvp-rank big-rank-shadow-#{shadow_rank(@player)}"}data-toggle="tooltip" title={"#{Moba.pve_tiers[@player.pve_tier]} (#{@player.pve_tier})"}/>
                     <h2 class="text-white f-rpg"><span class={"name-shadow-#{shadow_rank(@player)}"}><%= username(@player) %></span></h2>
                 </div>
                 <hr/>
@@ -122,7 +122,7 @@
                                 <%= if @ranking_display == "daily" do %>
                                     <th>Daily Win Rate</th>
                                 <% else %>
-                                    <th data-toggle="tooltip" title="Score is defined by: Best Immortal Streak (Season Points)">Season Score</th>
+                                    <th data-toggle="tooltip" title="Score calculation: Best Immortal Streak x 1000 + Training Rank x 500 + Season Points">Season Score</th>
                                 <% end %>
                             </tr>
                         </thead>
@@ -148,7 +148,7 @@
                                         <%= if @ranking_display == "daily" do %>
                                             <h3 class={performance_class(player)} title={"#{player.daily_wins} wins / #{player.daily_matches} matches"} data-toggle="tooltip" id={"daily-player-#{player.id}"}><%= daily_win_rate(player)%></h3>
                                         <% else %>
-                                            <h3 class="text-success"  id={"season-player-#{player.id}"}><%= player.best_immortal_streak %> <span class="text-small">(<%= player.pvp_points %>)</span></h3>
+                                            <h3 class="text-success"  id={"season-player-#{player.id}"}><%= season_score(player) %></h3>
                                         <% end %>
                                     </td>
                                 </tr>
