--- a/lib/moba_web/templates/layout/live.html.heex
+++ b/lib/moba_web/templates/layout/live.html.heex
@@ -1,7 +1,12 @@
 <%= if non_guest?(assigns), do: live_render(@socket, MobaWeb.CurrentPlayerLive, id: "current-player") %>
 
 <%= if show_sidebar?(assigns) do %>
-    <%= render "sidebar.html", assigns %>
+    <div class="row">
+        <%= live_render(@socket, MobaWeb.SidebarLive, session: %{"sidebar_code" => assigns[:sidebar_code], "notifications" => assigns[:notifications]}, id: "sidebar-view") %>
+        <div class="col">
+            <%= @inner_content %>
+        </div>
+    </div>
 <% else %>
     <%= @inner_content %>
 <% end %>
