--- a/lib/moba_web/templates/community/_player.html.heex
+++ b/lib/moba_web/templates/community/_player.html.heex
@@ -21,7 +21,7 @@
         </div>
         <div class="card-body p-0 d-flex align-items-center justify-content-center">
         </div>
-        <div class="card-footer transparent p-1">
+        <div class="card-footer transparent p-1"  style="background:rgba(0,0,0,0.8)">
             <div class="row">
                 <div class="col justify-content-center d-flex">
                     <div class="btn-group hero-stats">  
