--- a/lib/moba_web/templates/community/index.html.heex
+++ b/lib/moba_web/templates/community/index.html.heex
@@ -89,9 +89,9 @@
                 <div class="row">
                     <div class="col">
                         <%= if length(@pve_ranking) > 0 do %>
-                            <h3>Best players of the current Season</h3>
+                            <h3 class="f-rpg">Best players of the current season</h3>
                         <% else %>
-                            <h3><i class="fa fa-loading fa-spin fa-2x"></i> Loading... </h3>
+                            <h3 class="f-rpg"><i class="fa fa-loading fa-spin fa-2x"></i> Loading... </h3>
                         <% end %>
                     </div>
                 </div>
@@ -104,7 +104,7 @@
             <div class={"mt-1 mb-1 #{unless @active_tab == "pve", do: "d-none"}"}>
                 <div class="row">
                     <div class="col">
-                        <h3 class="text-center">Best heroes of the current Season</h3>
+                        <h3 class="text-center f-rpg">Best heroes of the current season</h3>
                     </div>
                 </div>
                 <div class="row">
