--- a/lib/moba_web/templates/layout/sidebar.html.heex
+++ b/lib/moba_web/templates/layout/sidebar.html.heex
@@ -1,44 +1,42 @@
-<div class="row">
-    <div class="sidebar-nav-container">
-        <div class="sidebar-nav d-none d-md-flex">
-            <%= live_redirect to: Routes.live_path(@socket, MobaWeb.DashboardLive), data: [toggle: "tooltip", "tippy-placement": "right", "tippy-arrow": false], title: "<h3 class='ml-2 mr-2'>Training</h3>", class: sidebar_class(["training", "base"], assigns) do %>
-                <i class="fa-duotone fa-sword"></i>
+<div class="sidebar-nav-container">
+    <div class="sidebar-nav d-none d-md-flex">
+        <%= live_redirect to: Routes.live_path(@socket, MobaWeb.DashboardLive), data: [toggle: "tooltip", "tippy-placement": "right", "tippy-arrow": false], title: "<h3 class='ml-2 mr-2'>Training</h3>", class: sidebar_class(["training", "base"], assigns) do %>
+            <i class="fa-duotone fa-sword"></i>
+        <% end %>
+        <%= if @current_player.user_id do %>
+            <%= live_redirect to: Routes.live_path(@socket, MobaWeb.ArenaLive.Index), data: [toggle: "tooltip", "tippy-placement": "right", "tippy-arrow": false], title: "<h3 class='ml-2 mr-2'>Arena</h3>", class: sidebar_class("arena", assigns)  do %>
+                <i class="fa-duotone fa-swords"></i>
             <% end %>
-            <%= if @current_player.user_id do %>
-                <%= live_redirect to: Routes.live_path(@socket, MobaWeb.ArenaLive.Index), data: [toggle: "tooltip", "tippy-placement": "right", "tippy-arrow": false], title: "<h3 class='ml-2 mr-2'>Arena</h3>", class: sidebar_class("arena", assigns)  do %>
-                    <i class="fa-duotone fa-swords"></i>
-                <% end %>
-            <% else %>
-                <a href="javascript:;" class="no-action" data-toggle="tooltip" data-tippy-placement="right" title="<h3 class='ml-2 mr-2'>Arena (locked)<br/><em class='font-15'>you must create an account</em></h3>">
-                    <i class="fa-duotone fa-swords"></i>
-                </a>
+        <% else %>
+            <a href="javascript:;" class="no-action" data-toggle="tooltip" data-tippy-placement="right" title="<h3 class='ml-2 mr-2'>Arena (locked)<br/><em class='font-15'>you must create an account</em></h3>">
+                <i class="fa-duotone fa-swords"></i>
+            </a>
+        <% end %>
+        <%= if guest?(@current_player) do %>
+            <%= link to: Routes.pow_registration_path(@socket, :new), data: [toggle: "tooltip", "tippy-placement": "right", "tippy-arrow": false], title: "<h3 class='ml-2 mr-2'>Create an Account</h3>", id: "create-account-link" do %>
+                <i class="fa fa-user-plus"></i>
             <% end %>
-            <%= if guest?(@current_player) do %>
-                <%= link to: Routes.pow_registration_path(@socket, :new), data: [toggle: "tooltip", "tippy-placement": "right", "tippy-arrow": false], title: "<h3 class='ml-2 mr-2'>Create an Account</h3>", id: "create-account-link" do %>
-                    <i class="fa fa-user-plus"></i>
-                <% end %>
-            <% else %>
-                <%= live_redirect to: Routes.player_path(@socket, :show, @current_player.id), data: [toggle: "tooltip", "tippy-placement": "right", "tippy-arrow": false], title: "<h3 class='ml-2 mr-2'>Profile</h3>", class: sidebar_class("user", assigns) do %>
-                    <i class="fa-duotone fa-helmet-battle"></i>
-                <% end %>
-                <%= live_redirect to: Routes.live_path(@socket, MobaWeb.TavernLive), data: [toggle: "tooltip", "tippy-placement": "right", "tippy-arrow": false], title: "<h3 class='ml-2 mr-2'>Tavern</h3>", class: sidebar_class("tavern", assigns) do %>
-                    <i class="fa-duotone fa-dungeon"></i>
-                <% end %>
-                <%= live_redirect to: Routes.live_path(@socket, MobaWeb.CommunityLive), data: [toggle: "tooltip", "tippy-placement": "right", "tippy-arrow": false], title: "<h3 class='ml-2 mr-2'>Community</h3>", class: sidebar_class("community", assigns) do %>
-                    <i class="fa-duotone fa-globe"></i>
+        <% else %>
+            <%= live_redirect to: Routes.player_path(@socket, :show, @current_player.id), data: [toggle: "tooltip", "tippy-placement": "right", "tippy-arrow": false], title: "<h3 class='ml-2 mr-2'>Profile</h3>", class: sidebar_class("user", assigns) do %>
+                <i class="fa-duotone fa-helmet-battle"></i>
+            <% end %>
+            <%= live_redirect to: Routes.live_path(@socket, MobaWeb.TavernLive), data: [toggle: "tooltip", "tippy-placement": "right", "tippy-arrow": false], title: "<h3 class='ml-2 mr-2'>Tavern</h3>", class: sidebar_class("tavern", assigns) do %>
+                <i class="fa-duotone fa-dungeon"></i>
+            <% end %>
+            <%= live_redirect to: Routes.live_path(@socket, MobaWeb.CommunityLive), data: [toggle: "tooltip", "tippy-placement": "right", "tippy-arrow": false], title: "<h3 class='ml-2 mr-2'>Community</h3>", class: sidebar_class("community", assigns) do %>
+                <i class={"fa-duotone fa-globe #{if show_notifications?(assigns), do: "text-info"}"}></i>
+                <%= if show_notifications?(assigns) do %>
+                    <span class="badge badge-light-info"><%= @notifications %></span>
                 <% end %>
             <% end %>
-            <%= live_redirect to: Routes.live_path(@socket, MobaWeb.LibraryLive), data: [toggle: "tooltip", "tippy-placement": "right", "tippy-arrow": false], title: "<h3 class='ml-2 mr-2'>Game Manual</h3>", class: sidebar_class("library", assigns), id: "game-manual"  do %>
-                <i class="fa-duotone fa-book-sparkles"></i>
-            <% end %>
-            <%= if @current_player.user && @current_player.user.is_admin do %>
-                <a href="/admin">
-                    <i class="fa-duotone fa-user-shield"></i>
-                </a>
-            <% end %>
-        </div>
-    </div>
-    <div class="col">
-        <%= @inner_content %>
+        <% end %>
+        <%= live_redirect to: Routes.live_path(@socket, MobaWeb.LibraryLive), data: [toggle: "tooltip", "tippy-placement": "right", "tippy-arrow": false], title: "<h3 class='ml-2 mr-2'>Game Manual</h3>", class: sidebar_class("library", assigns), id: "game-manual"  do %>
+            <i class="fa-duotone fa-book-sparkles"></i>
+        <% end %>
+        <%= if @current_player.user && @current_player.user.is_admin do %>
+            <a href="/admin">
+                <i class="fa-duotone fa-user-shield"></i>
+            </a>
+        <% end %>
     </div>
 </div>
