Connecting with Discord unlocks Tinker,

--- a/assets/css/user.scss
+++ b/assets/css/user.scss
@@ -1,5 +1,16 @@
 .user-profile{
 
+  .discord-avatar{
+    border-radius: 500px;
+    width: 40px;
+  }
+
+  .mini-discord-avatar{
+    border-radius: 500px;
+    width: 20px;
+    margin-bottom: 0.3rem;
+  }
+
   .pve-rank{
     max-height: 40px;
   }
