--- a/lib/moba_web/templates/tavern/_avatar.html.heex
+++ b/lib/moba_web/templates/tavern/_avatar.html.heex
@@ -1,15 +1,15 @@
-<div class="col-xl-4 col-lg-6 col-sm-12 mb-2" id="avatar-<%=@avatar.id%>">
+<div class="col-xl-4 col-lg-6 col-sm-12 mb-2" id={"avatar-#{@avatar.id}"}>
     <div class="hero-card card ribbon-box">
         <%= if unlocked?(@avatar, @player) do %>
             <div class="ribbon-two ribbon-two-secondary"><span>Unlocked</span></div>
         <% end %>
-        <div class="card-body text-center p-0" style="background-image: url(<%=GH.background_url(@avatar)%>">
+        <div class="card-body text-center p-0" style={"background-image: url(#{GH.background_url(@avatar)}"}>
             <div class="name">
                <h3 class="m-0 text-center p-2 text-white f-rpg"><%= @avatar.name %></h3>
             </div>
-            <div class="ultimate" data-toggle="tooltip" title="<%= GH.skill_description(@avatar.ultimate) %>">
+            <div class="ultimate" data-toggle="tooltip" title={GH.skill_description(@avatar.ultimate)}>
                 <h4 class="mt-0">Ultimate</h4>
-                <img src="<%= GH.image_url(@avatar.ultimate) %>" style="width: 70px" class="img-border-sm"/>
+                <img src={"#{GH.image_url(@avatar.ultimate)}"} style="width: 70px" class="img-border-sm"/>
                 <h5 class="mb-0"><%= @avatar.ultimate.name %></h5>
                 <small><em>(mouse over for info)</em></small>
             </div>
