--- a/lib/moba_web/templates/arena/_trained_hero.html.heex
+++ b/lib/moba_web/templates/arena/_trained_hero.html.heex
@@ -25,7 +25,7 @@
             </div>
         </div>
         <div class="d-flex justify-content-between" style="background: #323b44 !important">
-            <%= if @selected_team && !Enum.member?(@selected_team.picks, @hero) do %>
+            <%= if @selected_team && !Enum.member?(@selected_team.picks, @hero) && length(@selected_team.picks) < 5 do %>
                 <button class="btn btn-block btn-success m-0 mr-1" phx-click="add-hero" phx-value-id={@hero.id} phx-hook="Loading" loading="Adding..." id={"add-button-#{@hero.id}"}><span class="loading-text"><i class="fa fa-arrow-left"></i> Add</span></button>
             <% end %>
         </div>
