--- a/lib/moba_web/templates/match/_picked_hero.html.heex
+++ b/lib/moba_web/templates/match/_picked_hero.html.heex
@@ -1,7 +1,7 @@
 <div class="col-md-12 mt-1" id={"hero-#{@hero.id}"} phx-target-element={"#hero-footer-#{@player_id}-#{@hero.id}"}  phx-hook="ToggleDisplay">
     <div class="card hero-card picked-hero mb-0" style={"background-image: url(#{GH.background_url(@hero)})"}>
-        <div class="card-header pt-0 pb-1">
-            <h4 class="text-white d-flex justify-content-between align-items-center mb-0">
+        <div class="card-header pt-1 pb-1">
+            <h4 class="text-white d-flex justify-content-between align-items-center mb-0 mt-0">
                 <span class="font-italic font-20 f-rpg"><%= if @hero.pve_ranking do %>#<%= @hero.pve_ranking %><% end %></span>
                 <div>
                     <%= GH.hero_league(@hero) %>
@@ -12,7 +12,7 @@
         </div>
         <div class="card-body p-0 d-flex align-items-center justify-content-center" >
         </div>
-        <div class="card-footer transparent p-1" id={"hero-footer-#{@player_id}-#{@hero.id}"}>
+        <div class="card-footer transparent p-0" id={"hero-footer-#{@player_id}-#{@hero.id}"}>
             <div class="row">
                 <div class="col-12">
                     <div class="skills-container d-flex justify-content-between">
@@ -24,5 +24,11 @@
                 </div>
             </div>
         </div>
+        <%= if @editable do %>
+            <div class="d-flex justify-content-between" style="background: #323b44 !important">
+                <button class="btn btn-xs btn-block btn-secondary m-0 mr-1" phx-click="move-up" phx-value-id={@hero.id} phx-hook="Loading" loading="Moving..." id={"move-up-#{@hero.id}"}><span class="loading-text"><i class="fa fa-arrow-up"></i> Move Up</span></button>
+                <button class="btn btn-xs btn-block btn-secondary m-0 mx-1" phx-click="move-down" phx-value-id={@hero.id} phx-hook="Loading" loading="Moving..." id={"move-down-#{@hero.id}"}><span class="loading-text"><i class="fa fa-arrow-down"></i> Move Down</span></button>
+            </div>
+        <% end %>
     </div>
 </div>
